# auto_recon_api

./: Dockerfile  Dockerfile.tools  README.md  compose.yaml  database.db  entrypoint.sh  pyproject.toml
api_tools/: .gau.toml  app.py  schemas.py  settings.py  tasks.py
auto_recon_api/: app.py  database.py  main.py  models.py  schemas.py  security.py  settings.py
auto_recon_api/api/: deps.py
auto_recon_api/core/: config.py  logging.py  pagination.py
auto_recon_api/db/: session.py
auto_recon_api/routes/: auth.py  domains.py  subdomains.py  users.py
auto_recon_api/tasks/: subdomains.py  urls.py
auto_recon_api/workers/: subdomains.py
migrations/: env.py
migrations/versions/: 01d5e8d6d681_fix_domain_uniqueness_per_user.py  0653fe250ebe_atualizando_table_user.py  0e8ef50298ce_update_users_table.py  345fc7e77c3c_fix_domain_uniqueness_per_user.py  379fbba3bf18_add_discovered_url.py  48a713839bbc_create_users_table.py  641f6946ae59_arrumando_o_delete_orphan.py  683dbe6ee5cf_create_table_domain.py  6c54e97c14a7_criação_tabela_subdomain.py  7ef9e04d4a64_atualizando_table_domain.py  84cc711a7879_correcao_domain_table_add_subdomain.py  b5d62753d1c4_arrumando_relacao_entre_subdomain_e_.py  ba31bed671dd_atualizando_table_domain.py  be4942a93955_correcao_domain_table.py  edd75a54b782_correcao_tabela_subdomain.py  (+1 more)
tests/: conftest.py  test_auth.py  test_auth_rate_limit.py  test_core_logging.py  test_core_pagination_extra.py  test_db.py  test_domain_urls.py  test_domains.py  test_domains_extra.py  test_jobs_endpoint.py  test_main_exceptions.py  test_schemas_validators.py  test_security.py  test_subdomains_endpoint.py  test_tasks_subdomains.py  test_tasks_urls.py  test_tasks_urls_extra.py  test_users.py  test_workers_subdomains.py  test_workers_subdomains_extra.py  test_workers_subdomains_missing.py
(+7 files in other folders)
